added a image link in section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         in our gallery.
       </p>
       
+      <a href="https://freecatphotoapp.com">
+        <img 
+          src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" 
+          alt="A cut orange cat lying on its back.">      
+      </a>
     </section>
   </main>
 </body>
