added second section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
           alt="A cut orange cat lying on its back.">      
       </a>
     </section>
+
+    <section>
+      
+    </section>
   </main>
 </body>
 </html>
