--- a/index.html
+++ b/index.html
@@ -31,9 +31,18 @@
           alt="A cut orange cat lying on its back.">      
       </a>
     </section>
-
-    <section>
+      <h2>Cat Lists</h2>
+      <h3>Things cats love:</h3>
       
+      <ul>
+        <li>catnip</li>
+        <li>laser pointers</li>
+        <li>lasagna</li>
+      </ul>
+
+      
+    <section>
+
     </section>
   </main>
 </body>
