Figure added image and figcaption in with it

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
         <li>lasagna</li>
       </ul>
 
-      
+      <figure>
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" 
+        alt="A slice of lasagna on a plate.">
+        <figcaption>A slice of lasagna on a plate.</figcaption>
+      </figure>
     <section>
 
     </section>
