Top 3 things cats hate contents added
Subheding, olderd list, fiture with image and
figurecaption added

--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
         alt="A slice of lasagna on a plate.">
         <figcaption>A slice of lasagna on a plate.</figcaption>
       </figure>
+
+      <h3>Top 3 things cats hate:</h3>
+
+      <ol>
+        <li>flea treatment</li>
+        <li>thunder</li>
+        <li>other cats</li>
+      </ol>
+
+      <figure>
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" 
+        alt="Five cats looking around field">
+        <figcaption>
+          Cats <strong>hate</strong> other cats.
+        </figcaption>
+      </figure>
     </section>
   </main>
 </body>
