figcaption content changed first figure

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <figure>
         <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" 
         alt="A slice of lasagna on a plate.">
-        <figcaption>A slice of lasagna on a plate.</figcaption>
+        <figcaption>Cats <em>love</em> lasgna</figcaption>
       </figure>
 
       <h3>Top 3 things cats hate:</h3>
