--- a/index.html
+++ b/index.html
@@ -65,5 +65,11 @@
       </figure>
     </section>
   </main>
+  <footer>
+    <p>
+      No Copyright - 
+      <a href="https://www.freecodecamp.org" 
+      target="_blank">freeCodeCamp.org</a></p>
+  </footer>
 </body>
 </html>
